EDU-1446 Fix all text wrap and clamp issues

--- a/src/components/media-player/media-player.less
+++ b/src/components/media-player/media-player.less
@@ -25,7 +25,7 @@
 .MediaPlayer-player {
   position: relative;
 
-  --plyr-video-background: @edu-white;
+  --plyr-video-background: transparent;
   cursor: pointer;
   margin: 0 auto;
 
