--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -1,5 +1,5 @@
 @media-analysis-text-padding: 5px;
-@media-analysis-pointer-border-width: 10px;
+@media-analysis-pointer-border-width: 9px;
 
 
 .MediaAnalysisDisplay {}
@@ -14,14 +14,14 @@
   position: relative;
 }
 
-.MediaAnalysisDisplay-chapterTitles {
+.MediaAnalysisDisplay-chapterSegments {
   display: flex;
   height: 40px;
   line-height: 40px;
   overflow-x: hidden;
 }
 
-.MediaAnalysisDisplay-chapterTitle {
+.MediaAnalysisDisplay-chapterSegment {
   .m-overflow-ellipsis;
   text-align: center;
   padding: 0 @media-analysis-text-padding;
@@ -29,7 +29,7 @@
   border-right: 1px dotted @edu-border-color-dark;
   cursor: default;
 
-  &.MediaAnalysisDisplay-chapterTitle--interactive {
+  &.MediaAnalysisDisplay-chapterSegment--interactive {
     cursor: pointer;
   }
 
@@ -44,12 +44,8 @@
 
 .MediaAnalysisDisplay-chapterPointers {
   display: flex;
-  height: 20px;
-  line-height: 40px;
-  margin-bottom: 10px;
-  overflow-x: hidden;
+  height: calc(@media-analysis-pointer-border-width * 2);
 }
-
 
 .MediaAnalysisDisplay-chapterPointer {
   position: relative;
@@ -64,41 +60,51 @@
     &::after {
       content: '';
       position: absolute;
-      top: calc(@media-analysis-pointer-border-width / 2);
+      top: @media-analysis-pointer-border-width;
       left: calc(50% - @media-analysis-pointer-border-width);
       width: 0;
       height: 0;
       border-left: @media-analysis-pointer-border-width solid transparent;
       border-right: @media-analysis-pointer-border-width solid transparent;
-      border-bottom: @media-analysis-pointer-border-width solid @edu-primary-color-light;
+      border-bottom: @media-analysis-pointer-border-width solid @edu-text-color-secondary;
     }
   }
 }
 
-.MediaAnalysisDisplay-chapterTexts {
-  height: 35px;
+.MediaAnalysisDisplay-viewedChapterInfoWrapper {
   display: flex;
-  overflow: hidden;
+  flex-direction: column;
   padding-bottom: 5px;
+  padding: @media-analysis-text-padding;
+  border: 1px solid @edu-border-color-light;
+  overflow: hidden;
+}
+
+.MediaAnalysisDisplay-viewedChapterInfo {
+  overflow: hidden;
 
   &.is-expanded {
-    height: unset;
+    overflow-y: auto;
   }
 }
 
-.MediaAnalysisDisplay-chapterText {
-  padding: @media-analysis-text-padding;
-  border-right: 1px dotted @edu-border-color-base;
+.MediaAnalysisDisplay-viewedChapterInfoTitle {
+  text-align: center;
+  .m-overflow-ellipsis;
+}
 
-  &:last-of-type {
-    border-right: none;
+.MediaAnalysisDisplay-viewedChapterInfoText {
+  height: 25px;
+  .m-line-clamp(1);
+
+  &.is-expanded {
+    height: 250px;
+    .m-line-clamp-none();
   }
 }
 
-.MediaAnalysisDisplay-chaptersTextsToggle {
-  position: absolute;
-  right: 5px;
-  bottom: -12px;
+.MediaAnalysisDisplay-viewedChapterInfoExpand {
+  margin: auto 0 0 auto;
   font-size: @edu-font-size-sm;
   user-select: none;
 }
